HouseHogPackage/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <description>Real Estate uploaded by customers for listing or sale.</description>
    <label>Property</label>
    <nameField>
        <displayFormat>Property-{00000}</displayFormat>
        <label>Property Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>