HouseHogPackage/main/default/objects/Property__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Property's Zip code.</description>
    <inlineHelpText>Enter 5-digit code, or 9-digit code with hyphen separating first five digits from last four.</inlineHelpText>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>