HouseHogPackage/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Property_Owner__c</columns>
    <columns>List_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>